--- a/templates/band/detail.html
+++ b/templates/band/detail.html
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div id="band-buttons">
-        <a href="#" class="btn btn-primary">Book band</a>
+        <a href="booking/offer/send/{{ band.id }}" class="btn btn-primary">Book band</a>
     </div>
 
 {% endblock %}
