--- a/templates/booking/send.html
+++ b/templates/booking/send.html
@@ -3,6 +3,18 @@
 
 {% endblock %}
 {% block content %}
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<link rel="stylesheet" href="/resources/demos/style.css">
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
+<script>
+ $( function() {
+   $("#id_date").datepicker({dateFormat: 'yy-mm-dd' });
+   $("#id_time").timepicker({timeFormat: 'HH:mm:ss', startTime: '18:00:00'});
+ } );
+</script>
     <div id="concert-container">
 
         {% if band_collisions %}
