fix broken link

--- a/templates/concert/splash.html
+++ b/templates/concert/splash.html
@@ -5,7 +5,7 @@
 
         <p><a href="concerts">Se konsertene du har ansvar for</a></p>
         {% if organiser %}
-            <p><a href="techs">Se teknikere på dine konserter</a></p>
+            <p><a href="technicians">Se teknikere på dine konserter</a></p>
         {% endif %}
     </div>
 {% endblock %}
