Fixed minor typos

--- a/templates/403.html
+++ b/templates/403.html
@@ -5,7 +5,7 @@
 <p>Du har prøvd å nå en side du ikke har tilgang til. Dette kan skyldes at du ikke er lagt til i en gruppe av sideadministrator.
     Om du hører til en gruppe, vennligst kontakt admin.</p>
 
-<p>Vil du <a href="{{ request.META.HTTP_REFERER }}">tilbake til forrige side</a>, eller kanskje helt <a href="{{ front }}">tilbake til framsida</a></p>?
+<p>Vil du <a href="{{ request.META.HTTP_REFERER }}">tilbake til forrige side</a>, eller kanskje helt <a href="/">tilbake til framsida</a>?</p>
 <p><strong>PS</strong>: Vi skal ikke si fra om dette til verken sideadministrator eller Julenissen!</p>
 
 {% endblock %}
