/concert/employments is dead. Long live /concert/concerts!

--- a/templates/frontpage/multiple_roles.html
+++ b/templates/frontpage/multiple_roles.html
@@ -20,6 +20,6 @@
     {% endif %}
     {% if 'technician' in roles %}
         <h4>Tekniker:</h4>
-        <p><a href="/concert/employments">Se hvilke konserter du skal jobbe på</a></p>
+        <p><a href="/concert/concerts">Se hvilke konserter du skal jobbe på</a></p>
     {% endif %}
 {% endblock %}
